# event-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: decisions.md  schema.md
k8s/: configmap.yaml  cronjob.yaml  deployment.yaml  secret.yaml
sql/: 001_schema.sql  002_indexes.sql
sql/analytics/: q1_events_by_type.sql  q2_events_hourly.sql  q3_error_rate_top_users.sql
sql/bench/: explain_partition_prune.sql
src/generator/: factory.py  main.py  models.py  writer.py
src/viz/: plot.py
tests/: test_models.py  test_writer.py
