[project]
name = "event-pipeline"
version = "0.1.0"
description = "Event log pipeline: generate → store → analyze → visualize"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    "pydantic>=2.0",
    "faker>=24.0",
    "matplotlib>=3.8",
    "pandas>=2.0",
]

[project.scripts]
generate = "src.generator.main:main"
visualize = "src.viz.plot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
